--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
-    "react-native-get-random-values": "^1.4.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "tailwind-rn": "^1.1.1",
-    "uuid": "^8.2.0"
+    "tailwind-rn": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
