Working on dates and timezones

--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-native-firebase/firestore": "^7.4.3",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-localize": "^1.4.0",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
